Name:                byteable
Version:             0.1.0
Synopsis:            Type class for sequence of bytes
Description:         abstract class to manipulate sequence of bytes
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          vincent@snarc.org
Category:            Data
Stability:           experimental
Build-Type:          Simple
Homepage:            http://github.com/vincenthz/hs-byteable
Cabal-Version:       >=1.8
data-files:          README.md

Library
  Exposed-modules:   Data.Byteable
  Build-depends:     base >= 4 && < 5
                   , bytestring
  ghc-options:       -Wall -fwarn-tabs

source-repository head
  type: git
  location: git://github.com/vincenthz/hs-byteable
